remove all outputs

--- a/modified_course_notebook.ipynb
+++ b/modified_course_notebook.ipynb
@@ -103,6 +103,7 @@
    "source": [
     "import umap\n",
     "import numpy as np\n",
+    "import sklearn.metrics\n",
     "import matplotlib.pyplot as plt\n",
     "import cebra.datasets\n",
     "from cebra import CEBRA\n",
@@ -271,7 +272,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Aplicando UMAP nos dados neurais\n",
     "\n",
     "# UMAP não supervisionado\n",
@@ -700,26 +700,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import sklearn.metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "pos: -0.8808 neg:  6.4932 total:  5.6124 temperature:  1.0000: 100%|██████████| 10000/10000 [02:06<00:00, 79.23it/s]\n"
-     ]
-    }
-   ],
    "source": [
     "# Train CEBRA-Behavior models with position variable.\n",
     "cebra_pos_model = CEBRA(**cebra_params)\n",
@@ -842,30 +825,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.metrics import confusion_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Proporção de cada classe:\n",
-      "Indo: 57.73%\n",
-      "Voltando: 42.27%\n"
-     ]
-    }
-   ],
    "source": [
     "# Visualizando a proporção de cada classe\n",
     "print(\"Proporção de cada classe:\")\n",
@@ -879,6 +841,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
     "# Modelo de Regressão Logística\n",
     "log_model = LogisticRegression(max_iter=1000, random_state=42)\n",
     "log_model.fit(neural_train, label_train[:, 1])\n",
@@ -900,8 +866,7 @@
     "    for j in range(cm.shape[1]):\n",
     "        plt.text(j, i, f'{cm[i, j] / cm[i].sum():.2%}', ha='center', va='center', color='black')\n",
     "\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -952,19 +917,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.neural_network import MLPClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
     "# Modelo de MLP para classificação\n",
     "mlp_model = MLPClassifier(hidden_layer_sizes=(5, 10), max_iter=1000, random_state=42)\n",
     "mlp_model.fit(neural_train, label_train[:, 1])\n",
@@ -1179,19 +1137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F1-Score médio (Regressão Logística): 0.84\n",
-      "Desvio padrão (Regressão Logística): 0.05\n",
-      "[0.8788198080086645, 0.8980758643202422, 0.8311403048339964, 0.8355617882036467, 0.7567065891485496]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dividir os dados em treino e teste, 5 folds\n",
     "from sklearn.model_selection import KFold\n",
